add logic for authentication service + image uploader service. config angular app app.config for AngularFireStore and AngularFireStorage

--- a/GallerySPA/src/app/dashboard/dashboard.component.css
+++ b/GallerySPA/src/app/dashboard/dashboard.component.css
@@ -33,6 +33,11 @@ header {
     gap: 15px;
 }
 
+.drag-over {
+    background-color: #f0f8ff !important;
+    border-color: #4285f4 !important;
+  }
+
 .user-name {
     font-weight: 500;
 }
