--- a/GallerySPA/src/app/dashboard/dashboard.component.html
+++ b/GallerySPA/src/app/dashboard/dashboard.component.html
@@ -3,7 +3,7 @@
         <div class="logo">Image Gallery</div>
         <div class="user-info">
             <span class="user-name">John Doe</span>
-            <button class="logout-btn" onclick="location.href='login.html'">Logout</button>
+            <button class="logout-btn" (click)="signOut()">Logout</button>
         </div>
     </header>
     
@@ -153,4 +153,5 @@
             </form>
         </div>
     </div>
+
 </body>
