--- a/GallerySPA/src/app/register/register.component.html
+++ b/GallerySPA/src/app/register/register.component.html
@@ -1,38 +1,71 @@
 <body>
     <div class="container">
         <h1>Create an Account</h1>
-        <form id="register-form">
+        <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
             <div class="form-row">
                 <div class="form-group">
                     <label for="first-name">First Name</label>
-                    <input type="text" id="first-name" name="first-name" required>
-                    <div class="error-message" id="first-name-error">Please enter your first name</div>
-                </div>
+                    <input
+                        type="text"
+                        id="first-name"
+                        name="first-name"
+                        formControlName="firstName" required>
+                        <div *ngIf="firstName?.invalid && (firstName?.dirty || firstName?.touched)" class="error-message">
+                        <div *ngIf="firstName?.errors?.['required']">firstName is required</div>
+                        <div *ngIf="firstName?.errors?.['firstName']">Please enter a valid firstName</div>
+                        </div>                </div>
                 <div class="form-group">
                     <label for="last-name">Last Name</label>
-                    <input type="text" id="last-name" name="last-name" required>
-                    <div class="error-message" id="last-name-error">Please enter your last name</div>
+                    <input
+                        type="text"
+                        id="last-name"
+                        formControlName="lastName" name="last-name" required>
+                        <div *ngIf="lastName?.invalid && (lastName?.dirty || lastName?.touched)" class="error-message">
+                        <div *ngIf="lastName?.errors?.['required']">lastName is required</div>
+                        <div *ngIf="lastName?.errors?.['lastName']">Please enter a valid lastName</div>
+                        </div>
                 </div>
             </div>
             <div class="form-group">
                 <label for="email">Email</label>
-                <input type="email" id="email" name="email" required>
-                <div class="error-message" id="email-error">Please enter a valid email address</div>
+                <input
+                    type="email"
+                    id="email"
+                    name="email"
+                    formControlName="email" required>
+                <div *ngIf="email?.invalid && (email?.dirty || email?.touched)" class="error-message">
+                    <div *ngIf="email?.errors?.['required']">Email is required</div>
+                    <div *ngIf="email?.errors?.['email']">Please enter a valid email</div>
+                </div>
             </div>
             <div class="form-group">
                 <label for="password">Password</label>
-                <input type="password" id="password" name="password" required>
-                <div class="error-message" id="password-error">Password must be at least 8 characters with at least one uppercase letter, one number, and one special character</div>
-            </div>
-            <div class="form-group">
+                <input
+                    type="password"
+                    id="password"
+                    name="password"
+                    formControlName="password" required>
+                    <div *ngIf="password?.invalid && (password?.dirty || password?.touched)" class="error-message">
+                    <div *ngIf="password?.errors?.['required']">password is required</div>
+                    <div *ngIf="password?.errors?.['password']">Please enter a valid password</div>
+                    </div>            </div>
+            <!-- <div class="form-group">
                 <label for="confirm-password">Confirm Password</label>
-                <input type="password" id="confirm-password" name="confirm-password" required>
+                <input
+                    type="password"
+                    id="confirm-password"
+                    name="confirm-password"
+                    required>
                 <div class="error-message" id="confirm-password-error">Passwords do not match</div>
-            </div>
-            <button type="submit">Register</button>
+            </div> -->
+            <button
+            [disabled]="registerForm.invalid || isLoading"
+                type="submit">
+                {{ isLoading ? 'logging in' : 'Register' }}
+            </button>
         </form>
         <div class="links">
-            <a href="login.html">Already have an account? Login</a>
+            <a routerLink="/login">Already have an account? Login</a>
         </div>
     </div>
 </body>
